fixed docker compose errors

--- a/midterm/users/default.conf
+++ b/midterm/users/default.conf
@@ -1,10 +1,10 @@
 upstream app_servers {
-    server users1:8000;  # Replace with the actual address of your first instance
-    server users2:8000;  # Replace with the actual address of your second instance
+    server users1:8000;
+    server users2:8000;
 }
 
 server {
-    listen 81;
+    listen 80;
     server_name localhost;
 
     location / {
