--- a/midterm/users/docker-compose.yml
+++ b/midterm/users/docker-compose.yml
@@ -13,3 +13,14 @@ services:
       - ./default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "81:80"
+
+  rabbitmq:
+    image: rabbitmq:management
+    ports:
+      - "5672:5672"  # RabbitMQ client connection
+      - "15672:15672"  # RabbitMQ management UI
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq  # Persist RabbitMQ data
+
+volumes:
+  rabbitmq_data:
