--- a/midterm/users/docker-compose.yml
+++ b/midterm/users/docker-compose.yml
@@ -3,9 +3,19 @@ version: '3.8'
 services:
   users1:
     build: .
+    command: python manage.py runserver 0.0.0.0:8001
+
+  user1-consumer:
+    build: .
+    command: python manage.py run_consumer
 
   users2:
     build: .
+    command: python manage.py runserver 0.0.0.0:8001
+
+  user2-consumer:
+    build: .
+    command: python manage.py run_consumer
 
   nginx:
     image: nginx:mainline
@@ -13,14 +23,3 @@ services:
       - ./default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "81:80"
-
-  rabbitmq:
-    image: rabbitmq:management
-    ports:
-      - "5672:5672"  # RabbitMQ client connection
-      - "15672:15672"  # RabbitMQ management UI
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq  # Persist RabbitMQ data
-
-volumes:
-  rabbitmq_data:
